RESOLVED FIXED283312
Fix pas_log formatting for size_t and uintptr_t variables
https://bugs.webkit.org/show_bug.cgi?id=283312
Summary Fix pas_log formatting for size_t and uintptr_t variables
Ian Grunert
Reported 2024-11-18 11:50:45 PST
There's a number of errors when building on Windows due to pas_log, using %lu for size_t and uintptr_t types. For example: pas_log("sharing index = %lu\n", index); generates an error: error: format specifies type 'unsigned long' but the argument has type 'size_t' (aka 'unsigned long long') I think these should be using %zu instead.
Attachments
Ian Grunert
Comment 1 2024-11-20 09:59:40 PST
EWS
Comment 2 2024-11-20 13:53:42 PST
Committed 286873@main (c39daa0ab4e3): <https://commits.webkit.org/286873@main> Reviewed commits have been landed. Closing PR #36902 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-20 13:54:12 PST
Note You need to log in before you can comment on or make changes to this bug.